<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160px"
    android:layout_marginLeft="80px"
    android:layout_marginRight="80px"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/cancel"
        android:textColor="#00bcd4"
        android:textSize="46px"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="onClose"/>

    <TextView
        android:layout_width="500px"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="46px"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about_system_update_download"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical|right"
        android:text="@string/download"
        android:textColor="#00bcd4"
        android:textSize="46px"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="onDownload"
        android:visibility="invisible"/>
</LinearLayout>
