<?xml version="1.0" encoding="utf-8"?>
<com.avatar.fota.VersionView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50.0px"
    android:layout_marginBottom="10.0px"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/versionTitle"
                style="@style/VersionTitle"
                android:layout_weight="1"
                android:text="@string/version_cur"
                android:layout_width="wrap_content" />

            <TextView
                android:id="@+id/version"
                style="@style/Version"
                android:layout_weight="1"
                android:gravity="center_vertical|right"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tips"
            style="@style/Tips"
            android:layout_marginTop="10px"/>

        <ProgressBar
            android:id="@+id/download_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="8px"
            android:layout_marginTop="20px"
            android:max="100"
            android:progressDrawable="@drawable/progressbar"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/line_devide"
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:layout_marginTop="20px"
            android:background="@drawable/line_devide" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="25px">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/release_note"
                style="@style/ReleaseNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/version_description" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_warn"/>

                <TextView
                    android:id="@+id/warn_text"
                    style="@style/WarningText"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10px"
                    android:text="@string/dialog_low_battery"/>
            </LinearLayout>

            <Button
                android:id="@+id/install_button"
                android:layout_width="850.0px"
                android:layout_height="160.0px"
                android:background="@drawable/install_button"
                android:layout_gravity="center_horizontal"
                android:textSize="72px"
                android:textColor="#ffffff"
                android:text="@string/install"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</com.avatar.fota.VersionView>